--- a/src/containers/products/styles.module.css
+++ b/src/containers/products/styles.module.css
@@ -3,3 +3,10 @@
     max-width: 1200px;
     padding: 0 20px; 
   }
+
+ .alignround{
+  display: flex;
+  justify-content: flex-start;
+  gap: 15px;
+ }
+  
