--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -12,7 +12,8 @@
     /* background-color: aquamarine; */
     margin-top: 30px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .footerlogo{
