--- a/src/containers/category/styles.module.css
+++ b/src/containers/category/styles.module.css
@@ -8,5 +8,12 @@
   display: flex;
   justify-content: flex-start;
   gap: 15px;
+  flex-wrap: wrap;
  }
+
+ @media (max-width: 768px) {
+  .alignround{
+    justify-content: center;
+  }
+}
   
