--- a/src/containers/home/styles.module.css
+++ b/src/containers/home/styles.module.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Urbanist&display=swap');
 
 
+
+
+
+
 .container {
     margin: 0 auto; 
     max-width: 1200px;
@@ -15,7 +19,7 @@
 
     /* background: linear-gradient(to bottom right, #e67e22, #f1c40f); */
  background-repeat: no-repeat;
- background-color: #FFFFE0;
+ background-color:  #ED2939;
     padding: 20px;
     /* height: 290px; */
     margin-top: 25px;
@@ -99,18 +103,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(172,52,105,1) 0%, rgba(0,198,255,1) 100%);
+  /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(172,52,105,1) 0%, rgba(0,198,255,1) 100%); */
   color: white;
+  background-color: black;
+  border-radius: 10px;
   margin-top: 20px;
   padding: 20px;
   text-align: center;
 }
 
 /* .poster{
-  margin-top: 25px;
-  margin-bottom: 25px;
-  height: 450px;
-} */
+  height: 50vh;
+}  */
 
 .colleccards{
   width: 200px;
