--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -4,14 +4,19 @@
     padding: 0 20px; 
 }
 
+html, body {
+  margin: 0;
+ }
+
 .main{
     background-color: aquamarine;
 }
 
 .footer{
-    /* background-color: aquamarine; */
+    background-color: #E6E6E6;
     margin-top: 30px;
     display: flex;
+    padding: 20px;
     justify-content: space-between;
     flex-wrap: wrap;
 }
