--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -60,6 +60,12 @@ html, body {
     text-align: center;
 
   }
+
+  .logoFont{
+    font-family: 'League Spartan', sans-serif;
+    font-size: 20px;
+    
+}
   
   
   
