--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -11,11 +11,12 @@ html, body {
     /* padding: 20px; */
     /* margin: 0 auto;  */
     /* max-width: 1200px; */
-    padding:  20px;
+    padding:  8px;
     align-items: center; 
     /* background-color: #c5e0e5; */
     /* position: fixed; */
-    height: 22px;
+    height: 50px;
+    
 }
 
 .navlinks{
@@ -43,10 +44,10 @@ html, body {
 .belownav{
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     /* background-color: black; */
     border-radius: 10px;
-    margin-top: 8px;
+    /* margin-top: 8px; */
     
     
 }
@@ -99,5 +100,14 @@ html, body {
 
 .cartect{
     text-align: end;
+}
+
+.sticky{
+  background-color: aliceblue;
+ 
+}
+
+.yellowBackground {
+  background-color: yellow;
 }
 
