--- a/src/containers/shoppingcart/styles.module.css
+++ b/src/containers/shoppingcart/styles.module.css
@@ -9,6 +9,7 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    gap: 40px;
   }
 
   .rate{
@@ -44,7 +45,7 @@
   }
 
   .summary{
-    width: 50%;
+    /* width: 50%; */
     background-color: #c5e0e5;
     
   }
@@ -53,4 +54,17 @@
     display: flex;
     justify-content: flex-end;
     
+  }
+
+  .layout{
+    display: flex;
+     /* flex-wrap: wrap; */
+     justify-content: space-between;
+  }
+
+  @media (max-width: 768px) {
+    .layout {
+      flex-direction: column; 
+      align-items: flex-end; 
+    }
   }
